# Mileage-Logger

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  INSTALL.md  README.md  WEB_CHANGELOG.md  alembic.ini  docker-compose.yml  docker-stack.local-postgres.yml  docker-stack.yml  pyproject.toml
.github/workflows/: ci.yml  publish-swarm-images.yml
alembic/: env.py
alembic/versions/: 20260611_0001_initial_schema.py  20260611_0002_trip_location_names.py  20260611_0003_personal_trip_patterns.py  20260612_0004_waypoint_region_ids.py  20260612_0005_remove_personal_trip_patterns.py  20260612_0006_add_trip_odometer_fields.py  20260612_0007_remove_monthly_reports.py  20260612_0008_add_site_last_visited_at.py  20260612_0009_add_trip_odometer_sources.py  20260614_0010_add_trip_processing_checkpoint.py  20260614_0011_add_smartcar_webhook_events.py  20260615_0012_add_deleted_trips.py  (+10 more)
mileage_logger/: __init__.py  app.py  cli.py  config.py  database.py  database_engine.py  database_migrations.py  logging_config.py  models.py  schemas.py
scripts/: docker-entrypoint.sh  gas-snapshot-loop.sh  init_docker_env.sh
tests/: test_api_auth.py  test_app_health.py  test_backups.py  test_changelog.py  test_database_engine.py  test_docker_compose.py  test_fordpass.py  test_gas_prices.py  test_limp_mode.py  test_logging_config.py  test_mileage.py  test_nginx_config.py  test_owntracks.py  test_owntracks_buffer.py  test_pdf.py  test_places.py  test_smartcar.py  test_smartcar_webhook.py  test_timezone.py  test_waypoints.py  test_web.py
(+54 files in other folders)
