[project]
name = "mileage-logger"
version = "1.2.2"
description = "OwnTracks mileage logger with PostgreSQL storage and monthly reimbursement PDFs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "paho-mqtt>=2.1.0",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.1",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.34.3",
    "webauthn>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[project.scripts]
mileage-logger = "mileage_logger.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mileage_logger"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
